fix navbar on mobile view.

--- a/public/css/local-styles.css
+++ b/public/css/local-styles.css
@@ -72,3 +72,9 @@
 .btn:hover {
   background-color: #334120;
 }
+
+.contact-link {
+  color: #4e5d78;
+}
+
+
